--- a/build.gradle
+++ b/build.gradle
@@ -22,6 +22,13 @@ allprojects {
     }
 }
 
+ext {
+    compileSdkVersion = 27
+    targetSdkVersion = 27
+    buildToolsVersion = '27.0.3'
+    supportLibVersion = '27.1.1'
+}
+
 task clean(type: Delete) {
     delete rootProject.buildDir
 }
